#####################
Nagios 2.x Change Log
#####################


2.9 - ??/??/3007
----------------
* Fix for incorrect performance data file write/append mode options
* Fix for current status of hosts with no host check command defined


2.8 - 03/08/2007
------------------
* Bug fix for calculating notification interval with service escalations
* Bug fix for using servicegroups in service dependency definitions
* Bug fix for bad date format submission in command CGI
* Possible segfault fix during restarts when daemon was performing host checks
* Fix for missing check timeout in event broker calls
* Fix for handling signals under NPTL
* Added error messages for passive service checks that don't correspond to a defined service



2.7 - 01/19/2007
----------------
* p1.pl now sets environment var (NAGIOS_PLUGIN) to indicate patch of plugin that is executing
* Updated nagiostats with new MRTG vars for tracking buffer usage
* Added sample MRTG config file
* Minor patches to availability and status CGIs
* Minor documentation updates
* Fix for segfault during expiration or deletion of scheduled downtime
* Fix for scheduling immediate service check through WAP interface
* Fix for leading whitespace before comments in object config files



2.6 - 11/27/2006
----------------
* Fix for unscheduled triggered downtime entries
* Fix for embedded audio in tac and status CGIs
* Fixed bug in nagiostats utility when reporting host/service check latency
* Misc code cleanups for compiler warnings
* Fixed error when reading empty (zero byte) config files
* Default is now to check for orphaned service checks (Francois Caen)
* Fixed bug with non-standard CGI config file location in status data (Carson Gaspar)
* Fixed bugs and simplified examples in sample config files (Mark Young)



2.5 - 07/13/2006
----------------
* Bug fix for excluding hidden files from config file processing
* Bug fix for incorrect links to trends CGI from notification CGI