@@ -3,7 +3,7 @@
  * UTILS.C - Miscellaneous utility functions for Nagios
  *
  * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   03-01-2007
+ * Last Modified:   03-22-2007
  *
  * License:
  *
@@ -76,6 +76,7 @@ extern int      use_true_regexp_matching;
 
 extern int      sigshutdown;
 extern int      sigrestart;
+extern char     **sigs;
 extern int      caught_signal;
 extern int      sig_id;
 
@@ -3377,6 +3378,8 @@ void reset_sighandler(void){
 
 /* handle signals */
 void sighandler(int sig){
+	char buffer[MAX_INPUT_BUFFER];
+	int x=0;
 
 	/* if shutdown is already true, we're in a signal trap loop! */
 	/* changed 09/07/06 to only exit on segfaults */
@@ -3388,7 +3391,23 @@ void sighandler(int sig){
 	if(sig<0)
 		sig=-sig;
 
+	for(x=0;sigs[x]!=(char *)NULL;x++);
+	sig%=x;
+
 	sig_id=sig;
+
+	/* log errors about segfaults now, as we might not get a chance to later */
+	/* all other signals are logged at a later point in main() to prevent problems with NPTL */
+	if(sig==SIGSEGV){
+		snprintf(buffer,sizeof(buffer),"Caught SIG%s, shutting down...\n",sigs[sig]);
+		buffer[sizeof(buffer)-1]='\x0';
+
+#ifdef DEBUG2
+		printf("%s\n",buffer);
+#endif
+
+		write_to_all_logs(buffer,NSLOG_PROCESS_INFO);
+		}
 
 	/* we received a SIGHUP, so restart... */
 	if(sig==SIGHUP)
