@@ -7,6 +7,8 @@ Nagios 2.x Change Log
 ----------------
 * Fix for incorrect performance data file write/append mode options
 * Fix for current status of hosts with no host check command defined
+* SIGSEGV signals should now be logged again (broken in 2.8)
+
 
 
 2.8 - 03/08/2007
